tests/bits-param/invalid-param-value-1.stderr
error: encountered invalid value argument for #[bitfield] `bits` parameter
 --> $DIR/invalid-param-value-1.rs:3:19
  |
3 | #[bitfield(bits = true)]
  |                   ^^^^
